--- a/codac-back/.env
+++ b/codac-back/.env
@@ -10,7 +10,7 @@ adUrlHml=https://servicios-hml.gcba.gob.ar/ad/v1.2/cuentas/
 adUrlPrdo=
 version=CAMBIAR.00.00-RC
 siteKey=CAMBIAR_KEY
-ambiente=dev
+ambiente=
 dataBase=tableros
 userDBdev=
 passDBdev=
