--- a/codac-back/.env
+++ b/codac-back/.env
@@ -11,7 +11,7 @@ adUrlPrdo=
 version=CAMBIAR.00.00-RC
 siteKey=CAMBIAR_KEY
 ambiente=
-dataBase=tableros
+dataBase=codac
 userDBdev=
 passDBdev=
 userDBhml=
