--- a/codac-front/package.json
+++ b/codac-front/package.json
@@ -11,6 +11,7 @@
     "cros": "^1.0.1",
     "material-react-table": "^1.2.10",
     "mdb-react-ui-kit": "^4.2.0",
+    "mdbreact": "^5.2.0",
     "moment": "^2.29.4",
     "powerbi-client-react": "^1.3.5",
     "primeicons": "^6.0.1",
@@ -23,7 +24,7 @@
     "react-modal": "^3.16.1",
     "react-pro-sidebar": "^1.0.0-alpha.7",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
