--- a/codac-front/.env
+++ b/codac-front/.env
@@ -8,6 +8,13 @@ REACT_APP_apiUrlBackHml=
 REACT_APP_apiUrlBackProd=http://localhost:3001
 REACT_APP_apiUrlBackLocal=http://localhost:3001
 REACT_APP_apiUrlFrontLocal=http://localhost:3000
+
+REACT_APP_apiUrlWsDataLocal=http://0.0.0.0
+REACT_APP_apiUrlWsDataDev=
+REACT_APP_apiUrlWsDataQa=
+REACT_APP_apiUrlWsDataHml=
+REACT_APP_apiUrlWsDataProd=
+
 REACT_APP_version=CAMBIAR.00.00-RC
 REACT_APP_siteKey=CAMBIAR_KEY
 REACT_APP_ambiente=local
