--- a/codac-back/.env
+++ b/codac-back/.env
@@ -1,31 +1,12 @@
-apiUrlBackDev=
-apiUrlBackQa=
-apiUrlBackHml=
-apiUrlBackProd=
-apiUrlBackLocal=http://localhost:3001
-adUrlLocal=https://servicios-hml.gcba.gob.ar/ad/v1.2/cuentas/
-adUrlDev=
-adUrlQa=
-adUrlHml=https://servicios-hml.gcba.gob.ar/ad/v1.2/cuentas/
-adUrlPrdo=
+
+userDataUrl=http://0.0.0.0/users/
+adUrl=https://servicios-hml.gcba.gob.ar/ad/v1.2/cuentas/
 version=CAMBIAR.00.00-RC
 siteKey=CAMBIAR_KEY
 ambiente=
 dataBase=codac
-userDBdev=
-passDBdev=
-userDBhml=
-passDBhml=
-userDBqa=
-passDBqa=
-userDBprod=
-passDBprod=
-userDBlocal=root
-passDBlocal=Mohicano22!
+userDB=root
+passDB=Mohicano22!
 client_id=bf7188c38b194b0c941947cc39b9a964
 client_secret=428062620AB94bb6B0036f87D857325E
-hostLocal=localhost
-hostProduccion=
-hostQa=
-hostHML=
-hostDev=
+host=localhost
